--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": "15.8.0"
-  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
@@ -21,5 +18,8 @@
     "nodepub": "^3.0.2",
     "openweather-apis": "^4.4.1",
     "sanitize-html": "^2.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
